[gd_scene load_steps=2 format=3 uid="uid://b50lk67dsmnpr"]

[ext_resource type="Script" path="res://script/edit_scene.gd" id="1_dnt8m"]

[node name="EditScene" type="Node2D"]
script = ExtResource("1_dnt8m")

[node name="CreateButton" type="Button" parent="."]
offset_left = 6.0
offset_top = 5.0
offset_right = 233.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 30
text = "创建数织"
metadata/_edit_use_anchors_ = true

[node name="CreateRowSlider" type="HSlider" parent="."]
offset_left = 8.0
offset_top = 75.0
offset_right = 163.0
offset_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 20.0
value = 1.0
tick_count = 1
ticks_on_borders = true
metadata/_edit_use_anchors_ = true

[node name="RowLabel" type="Label" parent="CreateRowSlider"]
layout_mode = 0
offset_left = 163.0
offset_top = -12.0
offset_right = 233.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 30
text = "行"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CreateColSlider" type="HSlider" parent="."]
offset_left = 8.0
offset_top = 129.0
offset_right = 163.0
offset_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 35.0
value = 1.0
tick_count = 1
ticks_on_borders = true
metadata/_edit_use_anchors_ = true

[node name="ColLabel" type="Label" parent="CreateColSlider"]
layout_mode = 0
offset_left = 163.0
offset_top = -12.0
offset_right = 233.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 30
text = "列"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 431.0
offset_top = 286.0
offset_right = 1181.0
offset_bottom = 786.0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="UpNumLabelGridContainer" type="GridContainer" parent="."]
offset_left = 431.0
offset_top = 26.0
offset_right = 1181.0
offset_bottom = 279.0
metadata/_edit_use_anchors_ = true

[node name="DownNumLabelGridContainer" type="GridContainer" parent="."]
offset_left = 53.0
offset_top = 286.0
offset_right = 425.0
offset_bottom = 786.0
metadata/_edit_use_anchors_ = true

[node name="CalcNumber" type="Button" parent="."]
offset_left = 6.0
offset_top = 162.0
offset_right = 233.0
offset_bottom = 212.0
theme_override_font_sizes/font_size = 30
text = "计算数字"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="value_changed" from="CreateRowSlider" to="." method="_on_create_row_slider_value_changed"]
[connection signal="value_changed" from="CreateColSlider" to="." method="_on_create_col_slider_value_changed"]
